--- a/plugin.xml
+++ b/plugin.xml
@@ -18,6 +18,11 @@
         <!-- This is the window variable name you want, like window.MyCordovaPlugin -->
         <clobbers target="MyCordovaPlugin" />
       </js-module>
+      <config-file target="AndroidManifest.xml" parent="/manifest">
+            <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+            <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+            <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+        </config-file>
       <config-file target="res/xml/config.xml" parent="/*">
         <feature name="MyCordovaPlugin">
           <param name="android-package" value="com.example.MyCordovaPlugin" />
